@@ -25,25 +25,6 @@ resolvers ++= Seq(
 )
 
 /**
- * @see https://docs.oracle.com/javase/8/docs/technotes/tools/windows/java.html
- * @see https://docs.oracle.com/javase/8/docs/api/java/awt/Toolkit.html
- * @see https://docs.oracle.com/javase/8/docs/api/java/net/doc-files/net-properties.html
- * @see https://spark.apache.org/docs/latest/tuning.html
- */
-javaOptions in ThisBuild ++= Seq(
-  "-Xms512m", "-Xmx1G", "-XX:+UseCompressedOops", "-XX:+PrintGCDetails", "-XX:+PrintGCTimeStamps", "-Djava.awt.headless=true",
-  "-Djava.net.preferIPv4Stack=true"
-)
-
-/**
- * @see https://docs.oracle.com/javase/8/docs/technotes/tools/windows/javac.html
- */
-javacOptions in ThisBuild ++= {
-  import Versions._
-  Seq("-source", jdk, "-target", jdk, "-Xlint:all")
-}
-
-/**
  * @see https://github.com/scala/scala/tree/2.11.x/src/compiler/scala/tools/nsc/settings
  */
 scalacOptions in ThisBuild ++= Seq(
